# EFI_atrophy_and_tumor

./: .gitignore  Constiutive_models.txt  README.md
src/: CMakeLists.txt  atrophy_1  main.cc  main.cc.orig  rampp_atrophy_9R.prm
src/efi/: CMakeLists.txt
src/efi/include/efi/base/: automatic_differentiation.h  bugfix_mesh_loop.h  cloneable_function.h  csv.h  exceptions.h  extractor.h  factory_tools.h  global_parameters.h  gnuplot_stream.h  logstream.h  postprocessor.h  type_traits.h  utility.h
src/efi/include/efi/constitutive/: collagen.h  constitutive_base.h  constitutive_factory.h  maxwell_element.h  maxwell_wiechert.h  modified_one_term_ogden.h  modified_one_term_ogden_atrophy.h  neo_hooke.h  neo_hooke_alternative.h  ogden.h
src/efi/include/efi/factory/: registry.h
src/efi/include/efi/grid/: geometry.h  geometry_factory.h  obstacle.h  obstacle_factory.h  refinement.h  skull.h  spatular.h
src/efi/include/efi/lab/: atrophy.h  experiment.h  experimental_data_handler.h  nanoindenter.h  retraction_ellipse.h  retraction_expansion_tube.h  retraction_spatulars.h  rotational_rheometer.h  sample.h  tension_compression_testing_device.h  testing_device.h  testing_device_factory.h  translational_rheometer.h  tumor.h
src/efi/include/efi/lac/: generic_linear_algebra.h  matrix_array.h  nonlinear_solver_control.h  tensor_shape.h  tensor_to_matrix_view.h
src/efi/include/efi/worker/: boundary_worker.h  cell_worker.h  copy_data.h  general_cell_data_storage.h  measure_data_worker.h  scratch_data.h  worker_base.h
src/efi/source/base/: cloneable_function.cc  factory_tools.cc  global_parameters.cc  postprocessor.cc
src/efi/source/constitutive/: collagen.cc  maxwell_element.cc  maxwell_wiechert.cc  modified_one_term_ogden.cc  modified_one_term_ogden_atrophy.cc  neo_hooke.cc  neo_hooke_alternative.cc  ogden.cc
src/efi/source/factory/: registry.cc
src/efi/source/grid/: geometry.cc  obstacle.cc  skull.cc  spatular.cc
src/efi/source/lab/: atrophy.cc  experiment.cc  experimental_data_handler.cc  nanoindenter.cc  retraction_ellipse.cc  retraction_expansion_tube.cc  retraction_spatulars.cc  rotational_rheometer.cc  rotational_rheometer.cc.orig  sample.cc  tension_compression_testing_device.cc  tension_compression_testing_device.cc.orig  translational_rheometer.cc  tumor.cc
src/efi/source/lac/: nonlinear_solver_control.cc
src/efi/source/worker/: boundary_worker.cc  cell_worker.cc  measure_data_worker.cc  worker_base.cc
